Ajout de la gestion des fichiers partagés et des tests pour la récupération et la liste des fichiers

--- a/WebPanel/projetIa.Tests/projetIa.Tests.csproj
+++ b/WebPanel/projetIa.Tests/projetIa.Tests.csproj
@@ -18,6 +18,12 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="../DossierPartage/**">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\projetIa\projetIa.csproj" />
   </ItemGroup>
