--- a/WebPanel/projetIa/projetIa.csproj
+++ b/WebPanel/projetIa/projetIa.csproj
@@ -6,4 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Include="../DossierPartage/**">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+</ItemGroup>
+
+
 </Project>
