--- a/API/dockerfile
+++ b/API/dockerfile
@@ -4,6 +4,12 @@ FROM python:3.9-slim
 # Set the working directory in the container
 WORKDIR /app
 
+# Install system dependencies required by OpenCV
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*  # Clean up to reduce image size
+
 # Copy only the necessary files first for better caching
 COPY requirements.txt requirements.txt
 
@@ -22,4 +28,3 @@ ENV FLASK_RUN_HOST=0.0.0.0
 
 # Run the Flask application
 CMD ["flask", "run"]
-
