--- a/WebPanel/projetIa/projetIa.csproj
+++ b/WebPanel/projetIa/projetIa.csproj
@@ -16,5 +16,12 @@
     <PackageReference Include="MudBlazor" Version="8.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="**\*.razor.css">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+</ItemGroup>
+
+
 
 </Project>
